# gimnasio_rust

./: .gitignore  Cargo.toml  LICENSE  README.md  ciber-segurida.md  ejecutar.nu  notas-personales.txt
.sqlx/: query-00d93b2aea1ab4505973d8530e0797411da9a3f45ee11747d9e74774a4a12be7.json  query-1d32f7023209d3b41ca5cb0846a00a7495f57f25c890c6bd94f655d4c0320b74.json  query-202b009486d401391185e915e87e3d3859755500a424262e851692f19978f3e6.json  query-23f81c7b62a5a61fc34f8347010e2360afe47d47ffb86a496ce2c7bdfc4ebdf4.json  query-2b9027a85d319a0c14027712cfb80da03191b1eb9692a41f451583fe7ee0297e.json  query-3cdad8d9078c3fb7158f6ed7dee60178156c01d213728908b109831130e2bbb6.json  query-45e09fc7cad404a9f47b02c46bfbe80acba28cc040eea021bcbc36411416bf72.json  query-4ac336dcc37dbee3bb1f940aa59f04e1daa61c786ec76ecf87aa4a67761591ad.json  query-5637cc5887bb6860ad0b953821ccf20b641ab1fc04257ee87c6170d9f56e0d39.json  query-5fdf80d13db05221055879511a5b01849ac24fa38fe0ff83ef63c04782d38da1.json  query-60fa73d1bee1911d86dc09b3a8431d6e503db39d4e0c3ce857081e153addfacc.json  (+26 more)
hexagonal_gimnasio/: Cargo.toml
hexagonal_gimnasio/src/: lib.rs
hexagonal_gimnasio/src/analitica_reportes/: mod.rs
hexagonal_gimnasio/src/control_asistencia/: mod.rs
hexagonal_gimnasio/src/control_asistencia/aplicacion/: caso_eliminar_asistencia.rs  caso_listar_asistencias.rs  caso_obtener_asistencia.rs  caso_obtener_info_asistencia_socio.rs  caso_registrar_asistencia.rs  mod.rs
hexagonal_gimnasio/src/control_asistencia/dominio/: asistencia.rs  mod.rs
hexagonal_gimnasio/src/control_asistencia/puertos/: asistencia_dto.rs  mod.rs  trait_asistencia.rs
hexagonal_gimnasio/src/empleado/aplicacion/: caso_login.rs  mod.rs
hexagonal_gimnasio/src/empleado/dominio/: empleado.rs  mod.rs  usuario.rs
hexagonal_gimnasio/src/empleado/puertos/: errores.rs  mod.rs  trait_empleado.rs  traits_login.rs
hexagonal_gimnasio/src/gestion_socio/aplicacion/: caso_actualizar_socio.rs  caso_buscar_socio.rs  caso_eliminar_socio.rs  caso_listar_socios.rs  caso_registrar_socio.rs  mod.rs
hexagonal_gimnasio/src/gestion_socio/dominio/: mod.rs  socio.rs
hexagonal_gimnasio/src/gestion_socio/puertos/: mod.rs  trait_socios.rs
hexagonal_gimnasio/src/membresias/aplicacion/: caso_listar_membresias.rs  caso_obtener_membresia.rs  caso_registrar_membresia.rs  caso_renovar_membresia.rs  caso_verificar_proximidad_vencimiento_membresia.rs  mod.rs
hexagonal_gimnasio/src/membresias/dominio/: membresia.rs  mod.rs
hexagonal_gimnasio/src/membresias/puertos/: membresias_dto.rs  mod.rs  trait_membresia.rs
infraestructura/: Cargo.toml
infraestructura/src/: lib.rs
infraestructura/src/persistencia/mysql/: contenedor.rs  error_my_sqlx.rs  mod.rs
infraestructura/src/persistencia/mysql/asistencia/: asistencia_repositorio.rs  mod.rs
infraestructura/src/persistencia/mysql/asistencia/impl_asistencia/: eliminar_asistencia.rs  info_completa.rs  listar_asistencia.rs  mod.rs  registrar_asistencia.rs
infraestructura/src/persistencia/mysql/empleado/: empleado_repository.rs  empleado_repository_impl.rs  mod.rs
infraestructura/src/persistencia/mysql/membresia/: membresia_repositorio.rs  mod.rs
infraestructura/src/persistencia/mysql/membresia/impl_membresia/: buscar_membresia.rs  listar_membresia.rs  mod.rs  registrar_membresia.rs  validar_membresia.rs
infraestructura/src/persistencia/mysql/socio/: mod.rs  socio_repository.rs
infraestructura/src/persistencia/mysql/socio/impl_socio/: actualizar_socio.rs  buscar_socio.rs  crear_socio.rs  eliminar.rs  listar_socio.rs  mod.rs
infraestructura/src/reportes/: eliminable_generador_de_reporte_asistencia_por_fecha.rs  mod.rs
infraestructura/src/reportes/eliminacion/: mod.rs  rprt_elim_asistencia.rs  rpty_elim_socio.rs  rpty_lista_socios_elim.rs
infraestructura/src/reportes/formulas/: mod.rs  reporte_final.rs  util.rs
infraestructura/src/reportes/ingresos_stock/: ganancia_membresias.rs  mod.rs
migrations/: 20260614213315_init_schema.down.sql  (+1 more)
(+50 files in other folders)
