[package]
name = "gimnasio"
version = "0.1.0"
edition = "2024"

[dependencies]
freya = { version = "=0.4.0-rc.23", features = ["router"] }
bitflags = "2.13.0"
chrono = "=0.4.45"
rust_decimal = "1.42.0"
sqlx = { version = "0.9.0", features = ["mysql", "runtime-tokio", "tls-native-tls"]}
anyhow = "1.0.102"
tokio = {version = "1.52.3", features = ["rt", "rt-multi-thread", "macros", "net"]}
thiserror = "2.0.18"
# derive_more = "2.1.1"
