[package]
name = "infraestructura"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
opener = { workspace = true }
rust_decimal = { workspace = true }
# propios
hexagonal_gimnasio = { workspace = true }
# para no tener problemas con los trait async en crates, hasta que salga la version propia de rust
async-trait = { workspace = true }
